DBC22-6203: Fixed z-index for map filters button at new location

--- a/src/frontend/src/Components/map/Map.scss
+++ b/src/frontend/src/Components/map/Map.scss
@@ -316,7 +316,7 @@
         position: absolute;
         top: 1rem;
         right: 1rem;
-        z-index: 5;
+        z-index: 1;
 
         @media (pointer: coarse) {
           top: 1rem;
